# khnum

./: CMakeLists.txt  Doxyfile  README.md
Models/small/Antoniewicz_2007_FE/: excluded_metabolites.txt  measured_isotopes.txt  measurements.csv  model.csv  substrate_input.csv
Models/small/Antoniewicz_2007_FE_G_S/: excluded_metabolites.txt  measured_isotopes.txt  measurements.csv  model.csv  substrate_input.csv
doc/html/: annotated.html  classes.html  cli_8h_source.html  dir_23acf38d3fcc8dda20c3df09a2315206.html  dir_8160860960abaa6564c99ff6e2ff4d04.html  dir_82d74b7273201396b53a4bf04582a693.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_b05a5fa85f84bfc9013183c9d87f9a36.html  dir_b7263c2df3abed61e1897d5e9e534860.html  dir_df9c4130e7601915b63fc941466b92f8.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  globals.html  globals_enum.html  globals_func.html  group__parser.html  index.html  menudata.js  model__parser_8h.html  model__parser_8h_source.html  modules.html  reaction__struct_8h.html  reaction__struct_8h_source.html  struct_chemical_equation-members.html  struct_chemical_equation.html  struct_reaction-members.html  struct_reaction.html  struct_substrate-members.html  struct_substrate.html
doc/html/search/: all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  (+9 more)
doc/latex/: annotated.tex  files.tex  group__parser.tex  model__parser_8h.tex  modules.tex  reaction__struct_8h.tex  refman.tex  struct_chemical_equation.tex  struct_reaction.tex  struct_substrate.tex
include/modeller/: calculate_flux_bounds.h  check_model.h  create_emu_list.h  create_emu_reactions.h  create_network_components.h  create_stoichiometry_matrix.h  modeller.h  sort_reactions.h
include/parser/: maranas_parser.h  parser.h  parser_results.h  python_parser.h
include/simulator/: flux_combination.h  generator.h  generator_utilites.h  new_simulator.h  old_simulator.h  simulation_data.h  simulator.h  simulator_utilities.h
include/solver/: solver.h
include/utilities/: emu.h  emu_and_mid.h  get_eigen_vec_from_alglib_vec.h  input_substrate.h  matrix.h  measurement.h  problem.h  reaction.h
lib/alglib/: CMakeLists.txt
lib/catch/: CMakeLists.txt
lib/eigen/: CMakeLists.txt
lib/glpk/: CMakeLists.txt
lib/glpk/glpk/amd/: amd_internal.h
model/: excluded_metabolites.txt  measured_isotopes.txt  measurements.csv  model.csv
modelBig/: excluded_metabolites.txt  measurements.csv  substrate_input.csv
modelLast/: excluded_metabolites.txt  measured_isotopes.txt  measurements.csv  model.csv  substrate_input.csv
modelLast/correctionMatrices/: ala_L_c:111.txt  arg_L_c:111111.txt  asp_L_c:1111.txt  gly_c:11.txt  his_L_c:111111.txt  ile_L_c:111111.txt  lys_L_c:111111.txt  met_L_c:11111.txt  phe_L_c:111111111.txt  pro_L_c:11111.txt  ser_L_c:111.txt  thr_L_c:1111.txt  tyr_L_c:111111111.txt  val_L_c:11111.txt
modelMaranas/: flux_model.csv  measurements.csv  model.csv  substrate_input.csv
modelTca/: excluded_metabolites.txt  measured_isotopes.txt  measurements.csv  model.csv  substrate_input.csv
modelTiny/: measured_isotopes.txt  measurements.csv  model.csv  substrate_input.csv
scripts/: all_emu  draw_graph.py  input_emu  measured_emu  one_size_reactions
src/: main.cpp
src/clusterizer/: clusterizer.cpp  clusterizer.h
src/interface/: cli.cpp  cli.h  file_system.cpp  file_system.h
src/math/: calculate_flux_bounds.cpp  calculate_flux_bounds.h  calculate_input_mid.cpp  calculate_input_mid.h  calculate_mids.cpp  calculate_mids.h  clusterizer.cpp  clusterizer.h  flux_balance_analysis.cpp  flux_balance_analysis.h  math_utilites.h  metabolic_flux_analysis.cpp  metabolic_flux_analysis.h  mfa_math.h
src/modeller/: calculate_flux_bounds.cpp  calculate_input_mid.cpp  calculate_input_mid.h  check_model.cpp  create_emu_list.cpp  create_emu_list.h  create_emu_networks.cpp  create_emu_networks.h  create_emu_reactions.cpp  create_emu_reactions.h  create_metabolite_list.cpp  create_metabolite_list.h  create_network_components.cpp  create_nullspace.cpp  create_nullspace.h  create_stoichiometry_matrix.cpp  create_stoichiometry_matrix.h  modeller.cpp  modeller.h  sort_reactions.cpp  sort_reactions.h
src/parser/: model_parser.cpp  model_parser.h  model_supplementary_parser.cpp  model_supplementary_parser.h  open_flux_parser.cpp  open_flux_parser.h  parser.h  parser_open_flux.cpp  parser_open_flux.h  parser_results.h  parser_utilities.h
src/simulator/: Simulator.cpp  Simulator.h  calculate_mids.cpp  calculate_mids.h  flux_combination.cpp  flux_combination.h  generator.cpp  generator_utilites.cpp  new_simulator.cpp  new_simulator.h  old_simulator.cpp  simulation_data.cpp  simulator.cpp  simulator.h  simulator_utilities.cpp
src/solver/: metabolic_flux_analysis.cpp  metabolic_flux_analysis.h  solver.cpp  solver.h  solver_package.h
src/utilities/: EMU.cpp  EMU.h  Emu.cpp  Emu.h  MID.cpp  MID.h  debug_utilites.cpp  debug_utilites.h  emu.cpp  emu.h  emu_and_mid.cpp  emu_and_mid.h  get_eigen_vec_from_alglib_vec.cpp  get_eigen_vec_from_alglib_vec.h  input_substrate.h  linear_problem.h  math_utilites.h  matrix.h  measurement.h  measurements_struct.h  objective_parameters.h  problem.h  reaction.cpp  reaction.h  reaction_struct.cpp  reaction_struct.h  utilities.h
tests/: CMakeLists.txt  run_tests.cpp
tests/modeller_test/: create_all_emu_reactions_tests.cpp  mid_and_mixtures_tests.cpp  modelling_utils_tests.cpp
tests/open_flux_parser_test/: open_flux_parse_reactions_test.cpp  open_flux_parser_test.cpp
tests/open_flux_parser_test/get_lines/: file_with_empty_symbols.txt
tests/open_flux_parser_test/parse_input_substrate/: denormalized.txt  empty.txt  no_header.txt  normal_case.txt  wrong_commas.txt
tests/open_flux_parser_test/parse_measurements/: integer_emus.txt  integer_measurements.txt  little_emus.txt  little_measurements.txt  no_header_measure.txt  normal_case_emus.txt  normal_case_measurements.txt  overflow_emus.txt  overflow_measurements.txt  redundant_emus.txt  redundant_measurements.txt  wrong_symbols_emus.txt  wrong_symbols_measurements.txt
(+16 files in other folders)
